--- a/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/NotaDeDebitoBanco/Nuevo.cshtml
@@ -1,6 +1,6 @@
 ﻿@model Core.Erp.Info.Banco.ba_Cbte_Ban_Info
 @{
-    ViewBag.Title = "Nuevo débito";
+    ViewBag.Title = "Nuevo débito bancario";
     Layout = "~/Views/Shared/_Layout.cshtml";
     if (Session["IdUsuario"] == null || Session["IdEmpresa"] == null)
     {
@@ -8,7 +8,156 @@
     }
 }
 <script src="~/Scripts/ValidacionBotonSubmit.js"></script>
+<script type="text/javascript">
+    $(function () {
+        $("#IdSucursal").change(function () {
+            GetListBancoPorSucursal();
+            armar_diario();
+        });
+        $("#IdBanco").change(function () {
+            armar_diario();
+        });
+        $("#IdTipoNota").change(function () {
+            armar_diario();
+        });
+        $("#IdTipo_Persona").change(function () {
+            vaciar_detalles();
+            IdEntidad.SetValue(null);
+        });
+        $("#cb_Valor").change(function () {
+            armar_diario();
+        });
+        armar_diario();
+    });
 
+
+
+    function AddOP() {
+        var datos = {
+            IDs: selectedIDs,
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("EditingAddNew", "NotaDeDebitoBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+        selectedIDs = "";
+        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
+        GridView_DebitoBanco_op.PerformCallback();
+        $("#OpModal").modal("hide");
+    }
+
+    function armar_diario() {
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdBanco: $("#IdBanco").val(),
+            IdTipoNota: $("#IdTipoNota").val(),
+            IdTransaccionSession: $("#IdTransaccionSession").val(),
+            Valor: $("#cb_Valor").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("armar_diario", "NotaDeDebitoBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                GridView_comprobante_detalle.PerformCallback();
+                $("#cb_Valor").val(data);
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function vaciar_detalles() {
+        var datos = {
+            IdTransaccionSession: $("#IdTransaccionSession").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("vaciar_detalle", "ChequeBanco",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+            },
+            error: function (error) {
+            }
+        });
+        GridView_comprobante_detalle.PerformCallback();
+        GridView_DebitoBanco_op.PerformCallback();
+    }
+    function GetListBancoPorSucursal() {
+        $("#IdBanco").empty();
+        var datos = {
+            IdEmpresa: $("#IdEmpresa").val(),
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetListBancoPorSucursal", "BancoCuenta",new { Area = "Banco"})',
+            async: false,
+            bDeferRender: true,
+            bProcessing: true,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                $.each(data, function (i, row) {
+                    $("#IdBanco").append("<option value=" + row.IdBanco + ">" + row.ba_descripcion + "</option>");
+                });
+            },
+            error: function (error) {
+            }
+        });
+    }
+    function OnSelectedCtaCbleChanged() {
+        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
+    }
+    function GrupoComboBox_BeginCallback(s, e) {
+        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
+        e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
+    }
+    var selectedIDs;
+    function OnBeginCallback(s, e) {
+        e.customArgs["IdTipo_Persona"] = $("#IdTipo_Persona").val();
+        e.customArgs["Entidad"] = IdEntidad.GetValue();
+        e.customArgs["selectedIDs"] = selectedIDs;
+    }
+
+    function OnSelectionChanged(s, e) {
+        s.GetSelectedFieldValues("IdOrdenPago_op", GetSelectedFieldValuesCallback);
+    }
+    function GetSelectedFieldValuesCallback(values) {
+        //Capture all selected keys
+        selectedIDs = values.join(',');
+    }
+    function MostrarModal() {
+        selectedIDs = "";
+        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
+        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
+        $("#OpModal").modal("show");
+    }
+
+</script>
 @using (Html.BeginForm("Nuevo", "NotaDeDebitoBanco", FormMethod.Post, new { @class = "form", @role = "form" }))
 {
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
@@ -158,7 +307,6 @@
             </div>
 
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_diario">
-                @*@Html.Action("GridViewPartial_comprobante_detalle_Credito", new { Area = "Banco", Controller = "NotaDeCreditoBanco" })*@
                 @Html.Action("GridViewPartial_comprobante_detalle", new { Area = "Contabilidad", Controller = "ComprobanteContable" })
             </div>
         </div>
@@ -173,175 +321,4 @@
     }
 }
 
-<script type="text/javascript">
-    $(function () {
 
-            $("#IdSucursal").change(function () {
-                GetListBancoPorSucursal();
-            });
-        $("#IdBanco").change(function () {
-            armar_diario();
-        });
-        $("#IdTipoNota").change(function () {
-            armar_diario();
-        });
-        $("#IdTipo_Persona").change(function () {
-            vaciar_detalles();
-            IdEntidad.SetValue(null);
-        });
-        armar_diario();
-    });
-
-    $("#cb_Valor").blur(function () {
-        SetValorDiario();
-    });
-
-    var selectedIDs;
-    function OnBeginCallback(s, e) {
-        e.customArgs["IdTipo_Persona"] = $("#IdTipo_Persona").val();
-        e.customArgs["Entidad"] = IdEntidad.GetValue();
-        e.customArgs["selectedIDs"] = selectedIDs;
-    }
-
-    function OnSelectionChanged(s, e) {
-        s.GetSelectedFieldValues("IdOrdenPago_op", GetSelectedFieldValuesCallback);
-    }
-    function GetSelectedFieldValuesCallback(values) {
-        //Capture all selected keys
-        selectedIDs = values.join(',');
-    }
-    function MostrarModal() {
-        selectedIDs = "";
-        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
-        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
-        $("#OpModal").modal("show");
-    }
-
-    function SetValorDiario() {
-        var datos = {
-            cb_Valor: $("#cb_Valor").val(),
-            IdTransaccionSession: $("#IdTransaccionSession").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("SetValorDiario", "NotaDeCreditoBanco", new { Area = "Banco"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                console.log(data);
-                GridView_comprobante_detalle.PerformCallback();
-            },
-            error: function (error) {
-            }
-        });
-    }
-
-    function AddOP() {
-        var datos = {
-            IDs: selectedIDs,
-            IdTransaccionSession: $("#IdTransaccionSession").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("EditingAddNew", "NotaDeDebitoBanco",new { Area = "Banco"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-            },
-            error: function (error) {
-            }
-        });
-        selectedIDs = "";
-        GridView_DebitoBanco_op_x_cruzar.PerformCallback();
-        GridView_DebitoBanco_op_x_cruzar.UnselectRows();
-        GridView_DebitoBanco_op.PerformCallback();
-        $("#OpModal").modal("hide");
-    }
-
-    function armar_diario() {
-        var datos = {
-            IdEmpresa: $("#IdEmpresa").val(),
-            IdBanco: $("#IdBanco").val(),
-            IdTipoNota: $("#IdTipoNota").val(),
-            IdTransaccionSession: $("#IdTransaccionSession").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("armar_diario", "NotaDeDebitoBanco",new { Area = "Banco"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                GridView_comprobante_detalle.PerformCallback();
-                $("#cb_Valor").val(data);
-            },
-            error: function (error) {
-            }
-        });
-    }
-
-    function vaciar_detalles() {
-        var datos = {
-            IdTransaccionSession: $("#IdTransaccionSession").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("vaciar_detalle", "ChequeBanco",new { Area = "Banco"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-            },
-            error: function (error) {
-            }
-        });
-        GridView_comprobante_detalle.PerformCallback();
-        GridView_DebitoBanco_op.PerformCallback();
-    }
-
-    function OnSelectedCtaCbleChanged() {
-        GridView_comprobante_detalle.GetEditor("IdGrupoPresupuesto").PerformCallback();
-    }
-    function GrupoComboBox_BeginCallback(s, e) {
-        e.customArgs["pre_IdCtaCble"] = IdCtaCble.GetValue();
-        e.customArgs["pre_fecha"] = moment(cb_Fecha.GetDate()).format('DD/MM/YYYY');
-    }
-function GetListBancoPorSucursal() {
-        $("#IdBanco").empty();
-        var datos = {
-            IdEmpresa: $("#IdEmpresa").val(),
-            IdSucursal: $("#IdSucursal").val()
-        }
-        $.ajax({
-            type: 'POST',
-            data: JSON.stringify(datos),
-            url: '@Url.Action("GetListBancoPorSucursal", "BancoCuenta",new { Area = "Banco"})',
-            async: false,
-            bDeferRender: true,
-            bProcessing: true,
-            dataType: 'json',
-            contentType: 'application/json; charset=utf-8',
-            success: function (data) {
-                $.each(data, function (i, row) {
-                    $("#IdBanco").append("<option value=" + row.IdBanco + ">" + row.ba_descripcion+ "</option>");
-                });
-            },
-            error: function (error) {
-            }
-        });
-    }
-</script>
