--- a/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Modificar.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/BancoCuenta/Modificar.cshtml
@@ -14,6 +14,7 @@
     @Html.HiddenFor(q => q.IdEmpresa)
     @Html.HiddenFor(q => q.IdBanco)
     @Html.HiddenFor(q => q.IdBanco_Financiero)
+    @Html.HiddenFor(q => q.IdTransaccionSession)
 
     <div class="row">
         <div class="col-md-12">
@@ -116,6 +117,17 @@
                     <label for="Imprimir_Solo_el_cheque">Tipo de impresión</label>
                     @Html.DropDownListFor(q => q.Imprimir_Solo_el_cheque, new SelectList(ViewBag.lst_impresion, "Key", "Value"), new { @class = "form-control", @id = "ba_Tipo" })
                     @Html.ValidationMessageFor(q => q.Imprimir_Solo_el_cheque, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="">Detalle</label>
+                    @Html.Action("GridViewPartial_cuentas_x_sucursal")
                 </div>
             </div>
         </div>
