--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PeriodosPorNominas/Index.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PeriodosPorNominas/Index.cshtml
@@ -93,7 +93,7 @@
     <div class="row">
         <div class="col-md-6">
             <div class="col-md-12">
-                @Html.Action("GridViewPartial_perioos")
+                @Html.Action("GridViewPartial_periodos")
             </div>
         </div>
         <div class="col-md-6">
