--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/PeriodosPorNominas/_GridViewPartial_periodos_por_nominas.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/PeriodosPorNominas/_GridViewPartial_periodos_por_nominas.cshtml
@@ -2,10 +2,11 @@
 
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridView_ReportesPorUsuario";
+        settings.Name = "GridViewPartial_periodos_por_nominas";
         settings.CallbackRouteValues = new { Controller = "PeriodosPorNominas", Action = "GridViewPartial_periodos_por_nominas" };
         settings.KeyFieldName = "IdPeriodo";
         settings.Width = Unit.Percentage(100);
+        settings.SettingsText.Title = "Periodos por nominas";
 
         //Configuración para que la grilla no muestre texto completo
         settings.SettingsBehavior.AllowEllipsisInText = true;
@@ -35,16 +36,7 @@
         //Configuracion exportacion
         settings.SettingsExport.EnableClientSideExportAPI = true;
         settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-        settings.Toolbars.Add(t =>
-        {
-            t.EnableAdaptivity = true;
-            t.Items.Add(GridViewToolbarCommand.ExportToPdf).Text = "Exportar a PDF";
-            t.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Exportar a XLS";
-            t.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Exportar a XLSX";
-            t.Items.Add(GridViewToolbarCommand.ExportToDocx).Text = "Exportar a DOCX";
-            t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
-            t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
-        });
+       
         settings.SettingsExport.RenderBrick = (sender, e) =>
         {
             if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
